fix: no font on add task button on mobile

--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -536,7 +536,7 @@ body.is_loaded {
   }
 
   button {
-    font-size: 16px !important;
+    font-size: 16px;
   }
 
   .login_header a {
